Update build.gradle to include unit tests